# Engine7

./: CMakeLists.txt  README.md  main.cpp
Engine/: ImGuiSetup.h  OpenGlRenderer.cpp  math.cpp  structs.h
Engine/Core/: Core.cpp  Core.h  Vars.cpp
Engine/Ents/: EntManager.cpp  EntManager.h  EntUser.h  LightEnt.cpp  ParticleEnt.cpp  PlayerEnt.cpp  RenderBrushEnt.cpp
Engine/Import/: TrenchBroomImport.cpp
Engine/include/OpenAl/: OpenAL32.exp
Engine/subsys/: BrushTransform.cpp  Collision.cpp  CreateBrush.cpp  EntName.cpp  KeyMap.cpp  Light.cpp  Mouse.cpp  Particle.cpp  Raycast.cpp  SoundEngine.cpp  TextFunctions.cpp  TextureLoad.cpp  iniRead.cpp  save.cpp
Engine/subsys/OpenAL/: AL_Setup.cpp
Engine/subsys/OpenAl/: AL_Setup.cpp
docs/: BasicSetup.md  EntityFunctions.md
game/: EntManager.h  EntUser.h  GameEnt.cpp  GameSubsys.cpp  StartEntCreate.cpp
resources/maps/: PipeMap.map
resources/textures/: textures.ini
shaders/: Light.frag.glsl  Light.vert.glsl  base.frag.glsl  base.vert.glsl  pbr.frag.glsl
